--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/brand/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Patryk Orłowski | Personal website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>orlowski-dev</title>
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <main class="main">
+    <h1>Hi!</h1>
+    <p>I moved my personal website <a href="https://orlowski-dev.pl">here</a> &nbsp; &nbsp;
+      <span>//&nbsp;orlowski-dev.pl</span></p>
+  </main>
 </body>
 
 </html>
