--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>orlowski-dev</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="stylesheet" href="main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>orlowski-dev</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
-  <link rel="stylesheet" href="main.css">
-</head>
-
-<body>
-  <main class="main">
-    <h1>Hi!</h1>
-    <p>I moved my personal website <a href="https://orlowski-dev.pl">here</a> &nbsp; &nbsp;
-      <span>//&nbsp;orlowski-dev.pl</span></p>
-  </main>
-</body>
-
+  <body>
+    <main class="main">
+      <h1>Strona osobista w budowie.</h1>
+    </main>
+  </body>
 </html>
